Refactor styling and configuration for improved UI consistency and functionality
- Updated CSS classes across various components to enhance hover effects, focus states, and overall responsiveness, particularly in navigation and chat interfaces.
- Integrated Tailwind CSS for better styling management, including the addition of Tailwind plugins and configuration adjustments.
- Removed redundant files and updated package dependencies to streamline the project structure and ensure compatibility with the latest features.
- Enhanced component configurations to improve user experience, including adjustments to button sizes, input fields, and dialog components.

These changes collectively improve the visual consistency, usability, and maintainability of the application.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "**/.sst": true
   },
   "files.associations": {
-    "**/www/src/app.css": "tailwindcss"
+    "**/www/src/**/*.css": "tailwindcss"
   },
   "cSpell.words": [
     "autocorrect",
