--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -13,11 +13,10 @@
     "test": "vitest run"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.0",
     "@theaistudybible/tsconfig": "workspace:*",
     "@vite-pwa/assets-generator": "^0.2.6",
-    "autoprefixer": "^10.4.20",
     "nitropack": "^2.10.4",
-    "postcss": "^8.5.1",
     "sharp": "^0.33.5",
     "solid-devtools": "^0.33.0",
     "tailwind-variants": "^0.3.1",
@@ -55,11 +54,12 @@
     "@solid-primitives/memo": "^1.4.0",
     "@solid-primitives/resize-observer": "^2.1.0",
     "@solid-primitives/share": "^2.1.0",
-    "@solid-primitives/storage": "^4.3.0",
+    "@solid-primitives/storage": "4.2.1",
     "@solidjs/meta": "^0.29.4",
     "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.0.11",
     "@stripe/stripe-js": "^5.5.0",
+    "@tailwindcss/vite": "^4.0.0",
     "@tanstack/solid-query": "^5.64.2",
     "@tanstack/solid-query-devtools": "^5.64.2",
     "@tanstack/solid-table": "^8.20.5",
