Update Bun lockfile and configuration to use specific dependency versions
- Pin dependencies to specific versions in bun.lock
- Update biome.json to ignore bun.lock instead of bun.lockb
- Modify package.json and Dockerfile to reference bun.lock
- Ensure consistent dependency management across the project

--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,7 @@
       "**/.vinxi",
       "**/.output",
       "**/dist",
-      "**/bun.lockb",
+      "**/bun.lock",
       "**/migrations",
       "**/sst-env.d.ts",
       "packages/core/src/utils/bibles/__tests__/MAT.json"
