--- a/.github/workflows/pr-preview-deploy.yml
+++ b/.github/workflows/pr-preview-deploy.yml
@@ -29,6 +29,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: blacksmith-2vcpu-ubuntu-2204
+    timeout-minutes: 30
     steps:
       - name: Checkout
         uses: actions/checkout@v3
