--- a/.github/workflows/pr-preview-remove.yml
+++ b/.github/workflows/pr-preview-remove.yml
@@ -25,6 +25,7 @@ jobs:
   remove:
     name: Remove
     runs-on: blacksmith-2vcpu-ubuntu-2204
+    timeout-minutes: 30
     steps:
       - name: Checkout
         uses: actions/checkout@v3
