--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -30,6 +30,7 @@ jobs:
   deploy:
     name: Deploy
     runs-on: blacksmith-2vcpu-ubuntu-2204
+    timeout-minutes: 30
     steps:
       - name: Checkout
         uses: actions/checkout@v3
