Update GitHub Actions and Docker configurations
- Change GitHub Actions runners from custom to ubuntu-latest
- Update .dockerignore to include .turbo and modify .libsql.db ignore pattern
- Adjust www Dockerfile build command to use correct directory path

--- a/.dockerignore
+++ b/.dockerignore
@@ -13,6 +13,9 @@ node_modules
 # VSCode
 .vscode
 
+# Turbo
+.turbo
+
 # Migrations
 /migrations
 
@@ -31,5 +34,5 @@ sst.config.ts
 .cursorrules
 
 # Misc
-.libsql.db
+.libsql.db*
 .env*
