--- a/.github/workflows/pr-preview-remove.yml
+++ b/.github/workflows/pr-preview-remove.yml
@@ -24,7 +24,7 @@ env:
 jobs:
   remove:
     name: Remove
-    runs-on: blacksmith-2vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
       - name: Checkout
