--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -29,7 +29,7 @@ env:
 jobs:
   deploy:
     name: Deploy
-    runs-on: blacksmith-2vcpu-ubuntu-2204
+    runs-on: ubuntu-latest
     timeout-minutes: 30
     steps:
       - name: Checkout
