Update default branch from master to main
- Modify biome.json to use "main" as default branch
- Update GitHub Actions workflows to trigger on main branch
- Standardize branch references across configuration files

--- a/.github/workflows/pr-preview-remove.yml
+++ b/.github/workflows/pr-preview-remove.yml
@@ -3,7 +3,7 @@ name: Remove PR Preview
 on:
   pull_request:
     types: [closed]
-    branches: [master]
+    branches: [main]
 
 concurrency: pr-${{ github.event.pull_request.number }}
 
