--- a/.github/workflows/pr-preview-deploy.yml
+++ b/.github/workflows/pr-preview-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy PR Preview
 
 on:
   pull_request:
-    branches: [master]
+    branches: [main]
     paths-ignore:
       - 'README.md'
       - '.vscode'
