--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -2,7 +2,7 @@ name: Deploy to production
 
 on:
   push:
-    branches: [master]
+    branches: [main]
     paths-ignore:
       - 'README.md'
       - '.vscode'
