--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -9,7 +9,8 @@
     "type-check": "tsc --noEmit"
   },
   "devDependencies": {
-    "@theaistudybible/tsconfig": "workspace:*"
+    "@theaistudybible/tsconfig": "workspace:*",
+    "@types/cookie": "^1.0.0"
   },
   "dependencies": {
     "@lucia-auth/adapter-drizzle": "^1.1.0",
@@ -21,6 +22,7 @@
     "@sentry/node": "^8.51.0",
     "@theaistudybible/schemas": "workspace:*",
     "arctic": "^3.2.1",
+    "cookie": "^1.0.2",
     "ohash": "^1.1.4",
     "oslo": "^1.2.1",
     "sentry-integration-libsql-client": "^1.3.0"
