Add Cypress tests and improve login and devotion page interactions
- Add new Cypress test for chat page access and authentication
- Update devotion page test to improve element visibility checks
- Refactor login command to simplify and enhance reliability
- Add aria-label to devotion menu sidebar trigger
- Add new Cypress script for opening tests in production stage

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "clean-install": "rimraf bun.lock .sst --glob '**/node_modules' && bun install --no-cache && sst install",
     "clean": "turbo run clean",
     "cy:open": "sst shell -- cypress open",
+    "cy:open:prod": "sst shell --stage production -- cypress open",
     "db:generate": "sst shell -- drizzle-kit generate",
     "db:migrate": "sst shell -- drizzle-kit migrate",
     "db:seed": "sst shell -- bun run ./tools/scripts/src/index.ts db seed",
