Add Voyage AI Reranker for Enhanced Vector Search
- Integrate Voyage AI reranking API to improve vector search relevance
- Create new Reranker class in AI package with support for document reranking
- Update vector store tools to use reranking with first search term
- Add VoyageAiApiKey secret to infrastructure
- Modify vector search tools to simplify search term structure
- Update package dependencies to include voyage-ai-provider

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,6 +26,9 @@
     "precache",
     "pulumi",
     "Ratelimit",
+    "rerank",
+    "reranked",
+    "reranker",
     "Ruleset",
     "solidrouter",
     "solidstart",
