Upgrade Dependencies and Adjust Package Scripts
Update various package dependencies across the project, including:
- Bump Sentry packages to v8.54.0
- Upgrade AI, Vitest, Motion, and other minor dependencies
- Modify package scripts to include production stage commands for database and e2e testing operations

--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "build": "turbo run build",
     "clean-install": "rimraf bun.lock .sst --glob '**/node_modules' && bun install --no-cache && sst install",
     "clean": "turbo run clean",
-    "cy:open": "sst shell -- cypress open",
     "cy:open:prod": "sst shell --stage production -- cypress open",
-    "db:generate": "sst shell -- drizzle-kit generate",
+    "cy:open": "sst shell -- cypress open",
+    "db:generate": "sst shell --stage production -- drizzle-kit generate",
+    "db:migrate:prod": "sst shell --stage production -- drizzle-kit migrate",
     "db:migrate": "sst shell -- drizzle-kit migrate",
-    "db:seed": "sst shell -- bun run ./tools/scripts/src/index.ts db seed",
+    "db:seed:prod": "sst shell --stage production -- bun run ./tools/scripts/src/index.ts db seed",
+    "db:seed": "sst shell --stage production -- bun run ./tools/scripts/src/index.ts db seed",
+    "db:studio:prod": "sst shell --stage production -- drizzle-kit studio",
     "db:studio": "sst shell -- drizzle-kit studio",
     "deploy": "sst deploy",
     "dev": "sst dev",
@@ -28,8 +31,8 @@
     "secret:list": "sst secret list",
     "secret:remove": "sst secret remove",
     "secret:set": "sst secret set",
-    "test:e2e": "sst shell -- cypress run",
     "test:e2e:prod": "sst shell --stage production -- cypress run",
+    "test:e2e": "sst shell -- cypress run",
     "test": "sst shell -- vitest run",
     "type-check": "turbo run type-check",
     "upgrade": "bun run ./tools/scripts/src/index.ts upgrade && sst upgrade"
@@ -48,7 +51,7 @@
     "turbo": "^2.4.0",
     "typescript": "^5.7.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.4",
+    "vitest": "^2.1.9",
     "why-is-node-running": "^3.2.2"
   },
   "dependencies": {
@@ -61,7 +64,7 @@
     "@libsql/client": "^0.14.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.3",
-    "ai": "^4.1.16",
+    "ai": "^4.1.17",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.39.1",
     "drizzle-zod": "0.7.0",
