Refactor Instrumentation and Add PostHog Plugin
Restructure application instrumentation by:
- Removing `instrument.mjs`
- Adding `instrument.server.ts` for server-side Sentry initialization
- Creating a new PostHog plugin for server-side tracking
- Updating Dockerfile and configuration to use new instrumentation approach

--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -37,6 +37,6 @@
       "@/scripts/*": ["../../tools/scripts/src/*"]
     }
   },
-  "include": ["../../packages/core/globals.d.ts", "**/*.ts", "**/*.tsx", "./instrument.mjs"],
+  "include": ["../../packages/core/globals.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", ".output", ".vinxi"]
 }
