--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -77,6 +77,7 @@
     "motion": "^12.0.9",
     "posthog-js": "^1.215.1",
     "posthog-node": "^4.4.1",
+    "rollup-plugin-typescript-paths": "^1.5.0",
     "solid-js": "^1.9.4",
     "solid-markdown": "^2.0.14",
     "solid-sonner": "^0.2.8",
