Migrate Database Schema to Use Abbreviation References
Update database migration script to:
- Replace ID-based foreign key references with abbreviation and code references
- Modify table schemas to use more semantic identifiers
- Update data migration logic to map IDs to abbreviations and codes
- Maintain existing data integrity and relationships
- Add new indexes for improved query performance

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,5 +77,8 @@
   },
   "[tailwindcss]": {
     "editor.defaultFormatter": "biomejs.biome"
+  },
+  "[sql]": {
+    "editor.defaultFormatter": "mtxr.sqltools"
   }
 }
