Update Dependencies and Package Versions
Bump package versions across the project:
- Upgrade @langchain/community to 0.3.30
- Update SST to 3.8.4
- Bump Zod to 3.24.2
- Update Posthog JS and Node to 1.217.2 and 4.5.1
- Upgrade OpenAI SDK to 4.84.0
- Update Arctic to 3.3.0
- Modify Sentry and instrumentation configuration
- Refactor chat endpoint with improved message tracking and analytics

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
       "@/scripts/*": ["./tools/scripts/src/*"]
     }
   },
-  "include": [".sst/platform/config.d.ts", "**/*.ts", "**/*.tsx", "apps/www/instrument.mjs"],
+  "include": [".sst/platform/config.d.ts", "**/*.ts", "**/*.tsx", "apps/www/src/instrument.mjs"],
   "exclude": ["node_modules", "apps", "packages", "tools"]
 }
