--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -36,6 +36,6 @@
       "@/scripts/*": ["../../tools/scripts/src/*"]
     }
   },
-  "include": ["../../packages/core/globals.d.ts", "**/*.ts", "**/*.tsx", "./instrument.mjs"],
+  "include": ["../../packages/core/globals.d.ts", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", ".output", ".vinxi"]
 }
