--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
     "test:e2e:prod": "sst shell --stage production -- cypress run",
     "test:e2e": "sst shell -- cypress run",
     "test": "sst shell -- vitest run",
-    "type-check": "turbo run type-check",
+    "type-check": "tsc --noEmit && turbo run type-check",
     "upgrade": "bun run ./tools/scripts/src/index.ts upgrade && sst upgrade"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@types/aws-lambda": "^8.10.147",
     "@types/bun": "^1.2.2",
-    "@types/node": "^22.13.1",
+    "@types/node": "^22.13.2",
     "@types/web-push": "^3.6.4",
     "cypress": "^14.0.3",
     "cypress-wait-until": "^3.0.2",
@@ -64,7 +64,7 @@
     "@libsql/client": "^0.14.0",
     "@upstash/ratelimit": "^2.0.5",
     "@upstash/redis": "^1.34.4",
-    "ai": "^4.1.35",
+    "ai": "^4.1.36",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "0.7.0",
