Optimize Project Configuration and Dependencies
Update project configuration and dependencies:
- Add @solid-primitives/mutation-observer
- Integrate vite-bundle-analyzer
- Modify Vite configuration for improved build and SSR handling
- Update TypeScript configuration with stricter settings
- Refactor components to use server-side checks and improve compatibility
- Remove solid-devtools and related imports
- Enhance client-side and server-side rendering compatibility

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -52,6 +52,7 @@
     "@solid-primitives/context": "^0.3.0",
     "@solid-primitives/intersection-observer": "^2.2.0",
     "@solid-primitives/memo": "^1.4.0",
+    "@solid-primitives/mutation-observer": "^1.2.0",
     "@solid-primitives/resize-observer": "^2.1.0",
     "@solid-primitives/share": "^2.2.0",
     "@solid-primitives/storage": "4.3.1",
@@ -81,7 +82,8 @@
     "solid-js": "^1.9.4",
     "solid-markdown": "^2.0.14",
     "solid-sonner": "^0.2.8",
-    "tailwind-merge": "^3.0.1"
+    "tailwind-merge": "^3.0.1",
+    "vite-bundle-analyzer": "^0.17.0"
   },
   "engines": {
     "node": ">=18",
