--- a/apps/www/tsconfig.json
+++ b/apps/www/tsconfig.json
@@ -3,9 +3,14 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "bundler",
+    "allowSyntheticDefaultImports": true,
+    "esModuleInterop": true,
     "jsx": "preserve",
     "jsxImportSource": "solid-js",
+    "allowJs": true,
+    "strict": true,
+    "noEmit": true,
     "verbatimModuleSyntax": false,
     "isolatedModules": true,
     "lib": ["ESNext", "ESNext.AsyncIterable", "DOM", "DOM.Iterable", "WebWorker"],
