--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -13,22 +13,20 @@
     "test": "vitest run"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.0.6",
     "@theaistudybible/tsconfig": "workspace:*",
     "@vite-pwa/assets-generator": "^0.2.6",
-    "nitropack": "^2.10.4",
     "sharp": "^0.33.5",
     "solid-devtools": "^0.33.0",
     "tailwind-variants": "^0.3.1",
-    "tailwindcss": "^4.0.6",
+    "tailwindcss": "^4.0.7",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-safe-area": "^0.6.0",
     "vinxi": "^0.5.3",
-    "vite": "^6.1.0",
     "vite-plugin-cjs-interop": "^2.1.6",
     "vite-plugin-pwa": "^0.21.1",
     "vite-plugin-solid": "^2.11.1",
-    "vitest": "^3.0.5",
+    "vite-plugin-top-level-await": "^1.5.0",
+    "vite-plugin-wasm": "^3.4.1",
     "workbox-build": "^7.3.0",
     "workbox-core": "^7.3.0",
     "workbox-precaching": "^7.3.0",
@@ -60,9 +58,9 @@
     "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.1.1",
     "@stripe/stripe-js": "^5.6.0",
-    "@tailwindcss/vite": "4.0.6",
-    "@tanstack/solid-query": "^5.66.3",
-    "@tanstack/solid-query-devtools": "^5.66.3",
+    "@tailwindcss/vite": "4.0.7",
+    "@tanstack/solid-query": "^5.66.4",
+    "@tanstack/solid-query-devtools": "^5.66.4",
     "@tanstack/solid-table": "^8.21.2",
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
@@ -75,15 +73,19 @@
     "embla-carousel-solid": "^8.5.2",
     "hono": "^4.7.1",
     "lucide-solid": "^0.475.0",
-    "motion": "^12.4.3",
-    "posthog-js": "^1.218.2",
+    "motion": "^12.4.4",
+    "posthog-js": "^1.219.3",
     "posthog-node": "^4.6.0",
     "rollup-plugin-typescript-paths": "^1.5.0",
     "solid-js": "^1.9.4",
     "solid-markdown": "^2.0.14",
     "solid-sonner": "^0.2.8",
     "tailwind-merge": "^3.0.1",
-    "vite-bundle-analyzer": "^0.17.0"
+    "vite-bundle-analyzer": "^0.17.1"
+  },
+  "overrides": {
+    "nitropack": "^2.10.4",
+    "vite": "^6.1.0"
   },
   "engines": {
     "node": ">=18",
