--- a/package.json
+++ b/package.json
@@ -51,15 +51,15 @@
     "turbo": "^2.4.2",
     "typescript": "^5.7.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "vitest": "^3.0.5",
+    "vitest": "^3.0.6",
     "why-is-node-running": "^3.2.2"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.749.0",
-    "@aws-sdk/client-ses": "^3.749.0",
-    "@aws-sdk/client-sqs": "^3.749.0",
-    "@aws-sdk/s3-request-presigner": "^3.749.0",
-    "@langchain/community": "^0.3.30",
+    "@aws-sdk/client-s3": "^3.750.0",
+    "@aws-sdk/client-ses": "^3.750.0",
+    "@aws-sdk/client-sqs": "^3.750.0",
+    "@aws-sdk/s3-request-presigner": "^3.750.0",
+    "@langchain/community": "^0.3.31",
     "@langchain/core": "^0.3.40",
     "@libsql/client": "^0.14.0",
     "@upstash/ratelimit": "^2.0.5",
@@ -68,8 +68,8 @@
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.39.3",
     "drizzle-zod": "0.7.0",
-    "langchain": "^0.3.15",
-    "sst": "3.9.4",
+    "langchain": "^0.3.18",
+    "sst": "3.9.7",
     "stripe": "^17.6.0",
     "web-push": "^3.6.7",
     "zod": "^3.24.2"
@@ -81,6 +81,7 @@
     "@parcel/watcher",
     "@sentry/cli",
     "@sentry/profiling-node",
+    "@swc/core",
     "core-js",
     "cypress",
     "esbuild",
