--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -13,7 +13,6 @@
     "@types/cookie": "^1.0.0"
   },
   "dependencies": {
-    "@lucia-auth/adapter-drizzle": "^1.1.0",
     "@oslojs/binary": "^1.0.0",
     "@oslojs/crypto": "^1.0.1",
     "@oslojs/encoding": "^1.1.0",
@@ -23,6 +22,7 @@
     "@theaistudybible/schemas": "workspace:*",
     "arctic": "^3.3.0",
     "cookie": "^1.0.2",
+    "hash-wasm": "^4.12.0",
     "ohash": "^1.1.4",
     "oslo": "^1.2.1",
     "sentry-integration-libsql-client": "^1.3.0"
