Migrate web app deployment from Fly.io to Google Cloud Run and AWS Route 53
- Replace Fly.io infrastructure with Google Cloud Run services
- Add GCP region configuration and multi-region deployment support
- Update infrastructure to use Google Container Registry for image storage
- Implement AWS Route 53 latency-based routing for global server distribution
- Add Google Cloud credentials to environment configuration
- Create new GCP-specific region type definitions
- Remove Fly.io specific autoscaling and machine configuration

--- a/.env.example
+++ b/.env.example
@@ -5,6 +5,8 @@ NODE_ENV=
 # Fly.io
 FLY_ORG=
 FLY_API_TOKEN=
+# Google Cloud
+GOOGLE_APPLICATION_CREDENTIALS=
 # Turso
 TURSO_ORG=
 TURSO_API_TOKEN=
