Add GCP credentials setup to deployment workflows
Configure GCP authentication for all deployment and SST-related GitHub Actions workflows by:
- Adding a step to set up Google Cloud credentials
- Storing GCP service account key in a temporary file
- Setting GOOGLE_APPLICATION_CREDENTIALS environment variable

--- a/.github/workflows/pr-preview-deploy.yml
+++ b/.github/workflows/pr-preview-deploy.yml
@@ -41,7 +41,12 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y jq
-      
+
+      - name: Setup GCP Credentials
+        run: |
+          echo ${{ secrets.GCP_KEY }} > gcp-key.json
+          echo "GOOGLE_APPLICATION_CREDENTIALS=$PWD/gcp-key.json" >> $GITHUB_ENV
+
       - name: Set SST Stage
         run: |
           echo "pr-${{ github.event.pull_request.number }}" > .sst/stage
