Update GCP credentials environment variable configuration in GitHub Actions workflows
Modify GOOGLE_APPLICATION_CREDENTIALS path to use a relative file path instead of an absolute path across multiple deployment and SST-related workflows

--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -41,7 +41,7 @@ jobs:
       - name: Setup GCP Credentials
         run: |
           echo ${{ secrets.GCP_KEY }} > gcp-key.json
-          echo "GOOGLE_APPLICATION_CREDENTIALS=$PWD/gcp-key.json" >> $GITHUB_ENV
+          echo "GOOGLE_APPLICATION_CREDENTIALS=gcp-key.json" >> $GITHUB_ENV
 
       - name: Set SST Stage
         run: |
