--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -34,3 +34,16 @@ runs:
       shell: bash
       run: |
         bun sst install
+    
+    - name: Authenticate with GCP
+      uses: 'google-github-actions/auth@v2'
+      with:
+        credentials_json: '${{ secrets.GCP_KEY }}'
+      
+    - name: Set up gcloud sdk
+      uses: 'google-github-actions/setup-gcloud@v2'
+
+    - name: Setup docker auth for GCP
+      shell: bash
+      run: |
+          gcloud auth configure-docker -q
