--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -15,6 +15,7 @@ concurrency: production
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  GCP_KEY: ${{ secrets.GCP_KEY }}
   FLY_ORG: ${{ vars.FLY_ORG }}
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   TURSO_ORG: ${{ vars.TURSO_ORG }}
@@ -37,6 +38,8 @@ jobs:
 
       - name: CI Setup
         uses: ./.github/actions/ci-setup
+        with:
+          gcp_key: ${{ secrets.GCP_KEY }}
 
       - name: Set SST Stage
         run: |
