--- a/.github/workflows/sst-unlock.yml
+++ b/.github/workflows/sst-unlock.yml
@@ -12,6 +12,7 @@ concurrency: ${{ github.event.inputs.stage }}
 env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+  GCP_KEY: ${{ secrets.GCP_KEY }}
   FLY_ORG: ${{ vars.FLY_ORG }}
   FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
   TURSO_ORG: ${{ vars.TURSO_ORG }}
@@ -34,6 +35,8 @@ jobs:
 
       - name: CI Setup
         uses: ./.github/actions/ci-setup
+        with:
+          gcp_key: ${{ secrets.GCP_KEY }}
 
       - name: Set SST Stage
         run: |
