fix(ci): add quiet flag to Docker authentication command
Modify GCP Docker authentication to include the --quiet flag, preventing potential interactive prompts during CI/CD pipeline execution and ensuring smoother automated workflows

--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -51,4 +51,4 @@ runs:
     - name: Setup docker auth for GCP
       shell: bash
       run: |
-        gcloud auth configure-docker us-east4-docker.pkg.dev
+        gcloud auth configure-docker us-east4-docker.pkg.dev --quiet
