Reorganize project configuration and rules [ci skip]
- Remove deprecated .cursorrules file
- Add structured .cursor/rules directory with modular configuration files
- Update GitHub workflow path ignore patterns
- Introduce markdown-based rule files for TypeScript, SolidJS, and general development practices

--- a/.github/workflows/prod-deploy.yml
+++ b/.github/workflows/prod-deploy.yml
@@ -5,9 +5,10 @@ on:
     branches: [main]
     paths-ignore:
       - 'README.md'
-      - '.vscode'
-      - '.cursorrules'
-      - '.github'
+      - '.vscode/**'
+      - '.github/**'
+      - '.cursor/**'
+      - '.husky/**'
   workflow_dispatch:
 
 concurrency: production
