Update UI components and package dependencies
- Add new UI components: alert-dialog, alert, aspect-ratio, badge-delta, bar-list, breadcrumb, callout, charts, collapsible, combobox, date-picker, delta-bar, flex, grid, hover-card, menubar, otp-field, pagination, progress-circle, progress, radio-group, resizable, and timeline
- Update package dependencies across multiple packages
- Modify home page, about page, and pro page layouts
- Enhance authentication and subscription protection logic
- Synchronize TypeScript and package versions

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -34,7 +34,10 @@
   },
   "dependencies": {
     "@ai-sdk/solid": "^1.1.20",
+    "@ark-ui/solid": "^4.10.2",
     "@corvu/drawer": "^0.2.3",
+    "@corvu/otp-field": "^0.1.4",
+    "@corvu/resizable": "^0.2.4",
     "@fontsource-variable/inter": "^5.1.1",
     "@fontsource/goldman": "^5.1.1",
     "@formkit/auto-animate": "^0.8.2",
@@ -44,12 +47,13 @@
     "@modular-forms/solid": "0.25.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@pilcrowjs/object-parser": "^0.0.4",
-    "@sentry/solidstart": "^9.2.0",
+    "@sentry/solidstart": "^9.3.0",
     "@solid-primitives/clipboard": "^1.6.0",
     "@solid-primitives/context": "^0.3.0",
     "@solid-primitives/intersection-observer": "^2.2.0",
     "@solid-primitives/memo": "^1.4.0",
     "@solid-primitives/mutation-observer": "^1.2.0",
+    "@solid-primitives/refs": "^1.1.0",
     "@solid-primitives/resize-observer": "^2.1.0",
     "@solid-primitives/share": "^2.2.0",
     "@solid-primitives/storage": "4.3.1",
@@ -57,22 +61,23 @@
     "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.1.1",
     "@stripe/stripe-js": "^5.7.0",
-    "@tanstack/solid-query": "^5.66.9",
-    "@tanstack/solid-query-devtools": "^5.66.9",
+    "@tanstack/solid-query": "^5.66.11",
+    "@tanstack/solid-query-devtools": "^5.66.11",
     "@tanstack/solid-table": "^8.21.2",
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/schemas": "workspace:*",
     "@upstash/ratelimit": "^2.0.5",
+    "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk-solid": "^1.1.2",
     "cropperjs": "^1.6.2",
     "embla-carousel-solid": "^8.5.2",
     "hono": "^4.7.2",
-    "lucide-solid": "^0.476.0",
+    "lucide-solid": "^0.477.0",
     "motion": "^12.4.7",
-    "posthog-js": "^1.224.0",
+    "posthog-js": "^1.224.1",
     "posthog-node": "^4.8.1",
     "solid-js": "^1.9.5",
     "solid-markdown": "^2.0.14",
