--- a/.github/workflows/sst-remove.yml
+++ b/.github/workflows/sst-remove.yml
@@ -42,7 +42,7 @@ jobs:
 
       - name: Remove
         run: |
-          bun run remove
+          pnpm run remove
 
       - name: CI Cleanup
         uses: ./.github/actions/ci-cleanup
