--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -4,10 +4,17 @@ description: 'CI setup for The AI Study Bible'
 runs:
   using: 'composite'
   steps:
-    - name: Set up Bun
-      uses: oven-sh/setup-bun@v1
+    - name: Set up pnpm
+      uses: pnpm/action-setup@v4
       with:
-        bun-version: latest
+        version: 10
+        run-install: false
+
+    - name: Install Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 22
+        cache: 'pnpm'
 
     - name: Cache TurboRepo
       uses: actions/cache@v4
@@ -28,9 +35,9 @@ runs:
     - name: Install dependencies
       shell: bash
       run: |
-        bun install --frozen-lockfile
+        pnpm install
 
     - name: Install SST Providers
       shell: bash
       run: |
-        bun sst install
+        pnpm sst install
