--- a/.github/workflows/pr-preview-remove.yml
+++ b/.github/workflows/pr-preview-remove.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Remove
         run: |
-          bun run remove
+          pnpm run remove
 
       - name: CI Cleanup
         uses: ./.github/actions/ci-cleanup
