--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -61,8 +61,8 @@
     "@solidjs/router": "^0.15.3",
     "@solidjs/start": "^1.1.2",
     "@stripe/stripe-js": "^5.7.0",
-    "@tanstack/solid-query": "^5.66.11",
-    "@tanstack/solid-query-devtools": "^5.66.11",
+    "@tanstack/solid-query": "^5.67.1",
+    "@tanstack/solid-query-devtools": "^5.67.1",
     "@tanstack/solid-table": "^8.21.2",
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
@@ -76,7 +76,7 @@
     "embla-carousel-solid": "^8.5.2",
     "hono": "^4.7.2",
     "lucide-solid": "^0.477.0",
-    "motion": "^12.4.7",
+    "motion": "^12.4.9",
     "posthog-js": "^1.225.1",
     "posthog-node": "^4.8.1",
     "solid-js": "^1.9.5",
@@ -85,7 +85,6 @@
     "tailwind-merge": "^3.0.2"
   },
   "engines": {
-    "node": ">=18",
-    "bun": ">=1"
+    "node": ">=20"
   }
 }
