--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,7 @@
       "**/.vinxi",
       "**/.output",
       "**/dist",
-      "**/bun.lock",
+      "**/pnpm-lock.yaml",
       "**/migrations",
       "**/sst-env.d.ts",
       "packages/core/src/utils/bibles/__tests__/MAT.json"
