--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -22,6 +22,7 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-markdown": "^10.0.1",
+    "tailwindcss": "^4.0.9",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7"
   }
