--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "build": "turbo run build",
-    "clean-install": "rimraf pnpm-lock.yaml .sst --glob '**/node_modules' && pnpm cache delete && pnpm install -r && sst install",
+    "clean-install": "rimraf pnpm-lock.yaml .sst --glob '**/node_modules' && pnpm cache delete && pnpm install --recursive && sst install",
     "clean": "turbo run clean",
     "cy:open:prod": "sst shell --stage production -- cypress open",
     "cy:open": "sst shell -- cypress open",
@@ -74,5 +74,5 @@
     "web-push": "^3.6.7",
     "zod": "^3.24.2"
   },
-  "packageManager": "pnpm@9.14.2"
+  "packageManager": "pnpm@10.5.2"
 }
