--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -8,7 +8,7 @@ runs:
       uses: pnpm/action-setup@v4
       with:
         version: 10
-        run-install: false
+        run_install: false
 
     - name: Install Node.js
       uses: actions/setup-node@v4
