Configure pnpm build dependencies and update project configuration
- Add `onlyBuiltDependencies` configuration in package.json
- Update pnpm-lock.yaml with minor dependency hash changes
- Simplify pnpm-workspace.yaml package path syntax
- Modify CI setup action to use recursive and frozen-lockfile install
- Update Dockerfile to enable corepack and set PNPM_HOME
- Adjust Docker entrypoint command for node execution

--- a/.github/actions/ci-setup/action.yml
+++ b/.github/actions/ci-setup/action.yml
@@ -34,7 +34,7 @@ runs:
     - name: Install dependencies
       shell: bash
       run: |
-        pnpm install
+        pnpm install --recursive --frozen-lockfile
 
     - name: Install SST Providers
       shell: bash
