--- a/package.json
+++ b/package.json
@@ -74,5 +74,16 @@
     "web-push": "^3.6.7",
     "zod": "^3.24.2"
   },
-  "packageManager": "pnpm@10.5.2"
+  "packageManager": "pnpm@10.5.2",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "@parcel/watcher",
+      "@sentry/cli",
+      "core-js",
+      "cypress",
+      "esbuild",
+      "sharp"
+    ]
+  }
 }
