--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -10,8 +10,8 @@
   "devDependencies": {
     "@sentry/aws-serverless": "^9.3.0",
     "@sentry/esbuild-plugin": "^3.2.1",
-    "posthog-node": "^4.8.1",
-    "@theaistudybible/tsconfig": "workspace:*"
+    "@theaistudybible/tsconfig": "workspace:*",
+    "posthog-node": "^4.8.1"
   },
   "dependencies": {
     "@theaistudybible/ai": "workspace:*",
@@ -19,6 +19,6 @@
     "@theaistudybible/schemas": "workspace:*",
     "hono": "^4.7.2",
     "pdf-parse": "^1.1.1",
-    "svix": "^1.61.0"
+    "svix": "^1.61.1"
   }
 }
