Migrate components from Solid.js to React
- Convert chat, devotion, and admin components from Solid.js to React
- Update component structure, hooks, and state management
- Refactor markdown rendering and UI components
- Migrate authentication and routing components
- Improve type safety and component composition

--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -83,6 +83,7 @@
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/schemas": "workspace:*",
+    "@uidotdev/usehooks": "^2.4.1",
     "@upstash/ratelimit": "^2.0.5",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
@@ -91,9 +92,11 @@
     "cropperjs": "^2.0.0",
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.5.2",
+    "flowtoken": "^1.0.20",
     "hono": "^4.7.2",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.477.0",
+    "marked": "^15.0.7",
     "motion": "^12.4.10",
     "next-themes": "^0.4.4",
     "posthog-js": "^1.227.0",
@@ -102,6 +105,7 @@
     "react-day-picker": "8.10.1",
     "react-dom": "19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^10.0.1",
     "react-resizable-panels": "^2.1.7",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
