--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -71,6 +71,8 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@sentry/node": "^9.3.0",
+    "@sentry/react": "^9.5.0",
     "@stripe/stripe-js": "^5.8.0",
     "@tanstack/react-query": "^5.67.1",
     "@tanstack/react-query-devtools": "^5.67.1",
