--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -17,6 +17,7 @@
     "@theaistudybible/tsconfig": "workspace:*",
     "@types/react": "^19.1.0",
     "@types/react-dom": "^19.1.1",
+    "@types/react-helmet": "^6.1.11",
     "@vite-pwa/assets-generator": "^1.0.0",
     "@vitejs/plugin-react": "^4.3.4",
     "babel-plugin-react-compiler": "19.0.0-beta-e993439-20250328",
@@ -80,6 +81,7 @@
     "@tanstack/react-router-devtools": "^1.114.34",
     "@tanstack/react-router-with-query": "^1.114.34",
     "@tanstack/react-start": "^1.114.34",
+    "@tanstack/react-table": "^8.21.2",
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
     "@theaistudybible/schemas": "workspace:*",
@@ -103,6 +105,7 @@
     "react": "19.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "19.1.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.55.0",
     "react-markdown": "^10.1.0",
     "react-resizable-panels": "^2.1.7",
