--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -19,14 +19,14 @@
     "@types/react-dom": "^19.1.2",
     "@types/react-helmet": "^6.1.11",
     "@vite-pwa/assets-generator": "^1.0.0",
-    "@vitejs/plugin-react": "^4.4.0",
-    "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
+    "@vitejs/plugin-react": "^4.4.1",
+    "babel-plugin-react-compiler": "19.1.0-rc.1",
     "tailwind-variants": "^1.0.0",
     "tailwindcss": "^4.1.4",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss-safe-area": "^0.6.0",
     "vinxi": "^0.5.4",
-    "vite-bundle-analyzer": "^0.18.1",
+    "vite-bundle-analyzer": "^0.19.0",
     "vite-plugin-pwa": "^1.0.0",
     "vite-plugin-wasm": "^3.4.1",
     "vite-tsconfig-paths": "^5.1.4",
@@ -46,42 +46,42 @@
     "@internationalized/date": "^3.8.0",
     "@paralleldrive/cuid2": "^2.2.2",
     "@pilcrowjs/object-parser": "^0.0.4",
-    "@radix-ui/react-accordion": "^1.2.4",
-    "@radix-ui/react-alert-dialog": "^1.1.7",
-    "@radix-ui/react-aspect-ratio": "^1.1.3",
-    "@radix-ui/react-avatar": "^1.1.4",
-    "@radix-ui/react-checkbox": "^1.1.5",
-    "@radix-ui/react-collapsible": "^1.1.4",
-    "@radix-ui/react-context-menu": "^2.2.7",
-    "@radix-ui/react-dialog": "^1.1.7",
-    "@radix-ui/react-dropdown-menu": "^2.1.7",
-    "@radix-ui/react-hover-card": "^1.1.7",
-    "@radix-ui/react-label": "^2.1.3",
-    "@radix-ui/react-menubar": "^1.1.7",
-    "@radix-ui/react-navigation-menu": "^1.2.6",
-    "@radix-ui/react-popover": "^1.1.7",
-    "@radix-ui/react-progress": "^1.1.3",
-    "@radix-ui/react-radio-group": "^1.2.4",
-    "@radix-ui/react-scroll-area": "^1.2.4",
-    "@radix-ui/react-select": "^2.1.7",
-    "@radix-ui/react-separator": "^1.1.3",
-    "@radix-ui/react-slider": "^1.2.4",
+    "@radix-ui/react-accordion": "^1.2.7",
+    "@radix-ui/react-alert-dialog": "^1.1.10",
+    "@radix-ui/react-aspect-ratio": "^1.1.4",
+    "@radix-ui/react-avatar": "^1.1.6",
+    "@radix-ui/react-checkbox": "^1.2.2",
+    "@radix-ui/react-collapsible": "^1.1.7",
+    "@radix-ui/react-context-menu": "^2.2.11",
+    "@radix-ui/react-dialog": "^1.1.10",
+    "@radix-ui/react-dropdown-menu": "^2.1.11",
+    "@radix-ui/react-hover-card": "^1.1.10",
+    "@radix-ui/react-label": "^2.1.4",
+    "@radix-ui/react-menubar": "^1.1.11",
+    "@radix-ui/react-navigation-menu": "^1.2.9",
+    "@radix-ui/react-popover": "^1.1.10",
+    "@radix-ui/react-progress": "^1.1.4",
+    "@radix-ui/react-radio-group": "^1.3.3",
+    "@radix-ui/react-scroll-area": "^1.2.5",
+    "@radix-ui/react-select": "^2.2.2",
+    "@radix-ui/react-separator": "^1.1.4",
+    "@radix-ui/react-slider": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-switch": "^1.1.4",
-    "@radix-ui/react-tabs": "^1.1.4",
-    "@radix-ui/react-toggle": "^1.1.3",
-    "@radix-ui/react-toggle-group": "^1.1.3",
-    "@radix-ui/react-tooltip": "^1.2.0",
+    "@radix-ui/react-switch": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.8",
+    "@radix-ui/react-toggle": "^1.1.6",
+    "@radix-ui/react-toggle-group": "^1.1.7",
+    "@radix-ui/react-tooltip": "^1.2.3",
     "@sentry/node": "^9.13.0",
     "@sentry/react": "^9.13.0",
     "@sentry/tanstackstart-react": "^9.13.0",
-    "@stripe/stripe-js": "^7.1.0",
+    "@stripe/stripe-js": "^7.2.0",
     "@tanstack/react-query": "^5.74.4",
     "@tanstack/react-query-devtools": "^5.74.4",
     "@tanstack/react-router": "^1.116.0",
     "@tanstack/react-router-devtools": "^1.116.0",
     "@tanstack/react-router-with-query": "^1.116.0",
-    "@tanstack/react-start": "^1.116.1",
+    "@tanstack/react-start": "^1.116.2",
     "@tanstack/react-table": "^8.21.3",
     "@theaistudybible/ai": "workspace:*",
     "@theaistudybible/core": "workspace:*",
@@ -97,20 +97,20 @@
     "flowtoken": "^1.0.20",
     "hono": "^4.7.7",
     "input-otp": "^1.4.2",
-    "lucide-react": "^0.488.0",
-    "marked": "^15.0.8",
+    "lucide-react": "^0.503.0",
+    "marked": "^15.0.9",
     "motion": "^12.7.4",
     "next-themes": "^0.4.6",
-    "posthog-js": "^1.236.2",
-    "posthog-node": "^4.11.7",
+    "posthog-js": "^1.236.4",
+    "posthog-node": "^4.13.0",
     "react": "19.1.0",
     "react-day-picker": "8.10.1",
     "react-dom": "19.1.0",
     "react-helmet": "^6.1.0",
-    "react-hook-form": "^7.55.0",
+    "react-hook-form": "^7.56.0",
     "react-markdown": "^10.1.0",
-    "react-resizable-panels": "^2.1.7",
-    "recharts": "^2.15.2",
+    "react-resizable-panels": "^2.1.8",
+    "recharts": "^2.15.3",
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "usehooks-ts": "^3.1.1",
